# indoor-scanner

./: .gitignore  README.md
SF02_Arduino_Sketch/: SF02.cpp  SF02_Arduino_Sketch.ino
arduino/run/: SF02.cpp  newStep.cpp
arduino/runLidarLite/: orientation.cpp  orientation.h  runLidarLite.ino  stepperMotor.h
arduino/serialCommand/: serialCommand.ino
ardunioMain/: newStep.h
ardunioMain/run/: SF02.cpp  newStep.cpp  newStep.h  run.ino  smallStep.cpp  smallStep.h
dataViewer/: commandServer.js  demoServer.js  master-server.js  menuServer.js  originSwap.js  package.json  pug-server.js  reader.js  scan.txt  seniorDesignDemo.js  server.js  testServer.js
dataViewer/firstExample/: index.html  test.html
dataViewer/icp/: clean1.csv  clean1.vtk  clean2.csv  clean2.vtk  convert  convert_csv_vtk  convert_vtk_csv.js  createPointCloudCSV.js  default-convert.yaml  filtered.vtk  indoorScanner.yaml  indoor_scanner_icp  pointmatcher-run1-iterationInfo.csv  test1.csv  test2.csv
dataViewer/keyboardCommands/: index.html  index1.html
dataViewer/menuExample2/: index.html
dataViewer/originExample/: index.html
dataViewer/pclTests/helloNDT/: CMakeLists.txt  hello_ndt.cpp
dataViewer/scans/: TBE-01.csv  calibration.csv  cave_1.csv  cave_2.csv  cave_3.csv  cave_4.csv  cave_5.csv  firstRun.csv  foundation_1.csv.xyz  foundation_2.csv.xyz  great_hall_1.csv  hallway_1.csv  lied_1.csv.xyz  metro_1.csv  metro_2.csv  pool_1.csv  pool_2.csv  seb_1.csv.xyz  test.csv  test1.csv  test_1.csv  test_1.csv.xyz
mesh-example/: index.html  server.js
serialPiping/: serialTest.ino  serialTest.js
(+78 files in other folders)
